# n3rd-cpp

./: CMakeLists.txt  LeNetish.cpp  Makefile  README.md  TestConv.cpp  TestConvBlas.cpp  TestConvGPU.cpp  TestFC.cpp  TestFCBlas.cpp  TestFCCuBlas.cpp  TestFFT1D.cpp  TestGPU.cpp  TestMax2D.cpp  TestMaxOverTime.cpp  Train.cpp  TrainCNN.cpp  TrainNBoW.cpp
include/n3rd/: AbstractLayer.h  AverageFoldingLayer.h  ClassNLLLoss.h  DropoutLayer.h  FFTOps.h  FilterOps.h  FullyConnectedLayer.h  FullyConnectedLayerBlas.h  FullyConnectedLayerCuBlas.h  GPUOps.h  KMaxPoolingLayer.h  Layer.h  LogSoftMaxLayer.h  MNISTReader.h  MaxOverTimePoolingLayer.h  MaxOverTimePoolingLayerCuda.h  MaxPoolingLayer.h  MaxPoolingLayerCuda.h  NeuralNetModel.h  NeuralNetModelCuda.h  NeuralNetModelFactory.h  OrderedEmbeddedDatasetReader.h  ReLULayer.h  SigmoidLayer.h  SpatialConvolutionalLayer.h  SpatialConvolutionalLayerBlas.h  SpatialConvolutionalLayerCuBlas.h  SumEmbeddedDatasetReader.h  TanhLayer.h  TanhLayerCuda.h  TemporalConvolutionalLayer.h  TemporalConvolutionalLayerBlas.h  TemporalConvolutionalLayerCuBlas.h  TemporalConvolutionalLayerFFT.h  WeightHacks.h  Word2VecModel.h
include/sgdtk/: AdagradLinearModel.h  ConsumerProducerQueue.h  CuDNNTensor.h  CudaTensor.h  DenseVectorN.h  Exception.h  FeatureProvider.h  FeatureVector.h  FixedLearningRate.h  FixedLearningRateSchedule.h  GPU.h  HingeLoss.h  Layer.h  Learner.h  LearningRateSchedule.h  LinearModel.h  LinearModelFactory.h  LogLoss.h  Loss.h  Metrics.h  Model.h  ModelFactory.h  Params.h  RobbinsMonroUpdateSchedule.h  SGDLearner.h  SVMLightFileFeatureProvider.h  SparseVectorN.h  SquareLoss.h  SquaredHingeLoss.h  SquaredLoss.h  Tensor.h  TensorI.h  Types.h  VectorN.h  WeightModel.h  sgdtk.h
src/: AverageFoldingLayer.cpp  DenseVectorN.cpp  DropoutLayer.cpp  Exception.cpp  FFTOps.cpp  FilterOps.cpp  FullyConnectedLayer.cpp  FullyConnectedLayerBlas.cpp  FullyConnectedLayerCuBlas.cpp  GPU.cpp  GPUOps.cu  KMaxPoolingLayer.cpp  LinearModel.cpp  LogSoftMaxLayer.cpp  MNISTReader.cpp  MaxOverTimePoolingLayer.cpp  MaxOverTimePoolingLayerCuda.cpp  MaxPoolingLayer.cpp  MaxPoolingLayerCuda.cpp  NeuralNetModel.cpp  NeuralNetModelCuda.cpp  OrderedEmbeddedDatasetReader.cpp  Params.cpp  ReLULayer.cpp  SGDLearner.cpp  SVMLightFileFeatureProvider.cpp  SigmoidLayer.cpp  SparseVectorN.cpp  SpatialConvolutionalLayer.cpp  SpatialConvolutionalLayerBlas.cpp  SpatialConvolutionalLayerCuBlas.cpp  SumEmbeddedDatasetReader.cpp  TanhLayer.cpp  TemporalConvolutionalLayer.cpp  TemporalConvolutionalLayerBlas.cpp  TemporalConvolutionalLayerCuBlas.cpp  TemporalConvolutionalLayerFFT.cpp  Tensor.cpp  WeightHacks.cpp  Word2VecModel.cpp
